<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_email_address">Your email address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="instruction_messages">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="next">Next</string>
    <string name="instruction">Instruction</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="company">Company</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="size">Size</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="description">Description</string>
    <string name="enter_shoe_description">Enter shoe description</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoes">Shoes</string>
    <string name="logout">Logout</string>
</resources>
