<?xml version="1.0" encoding="utf-8"?>
<!-- The design based on stack views so linear layouts are suitable -->
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.ShoeDetailsFragment">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewModels.ShoeViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_details"/>

        <TextView
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shoeName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_margin"
            android:hint="@string/enter_shoe_name"
            android:text="@={viewModel.newShoe.name}"
            android:inputType="textAutoComplete" />

        <TextView
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/company_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_margin"
            android:hint="@string/enter_company_name"
            android:text="@={viewModel.newShoe.company}"
            android:inputType="textAutoComplete" />

        <TextView
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shoeSize_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_margin"
            android:hint="@string/enter_shoe_size"
            android:text="@={`` + viewModel.newShoe.size}"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_EditText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="@dimen/input_margin"
            android:hint="@string/enter_shoe_description"
            android:text="@={viewModel.newShoe.description}"
            android:gravity="left|top"
            android:lines="5"
            android:minLines="5"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="@style/accent_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/saveButton"
                style="@style/primary_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/save" />

        </LinearLayout>
    </LinearLayout>
</layout>