<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_dim"
            android:layout_height="@dimen/logo_dim"
            android:layout_margin="@dimen/input_margin"
            android:scaleType="fitXY"
            android:src="@drawable/splash_logo" />

        <TextView
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_margin"
            android:hint="@string/your_email_address"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_margin"
            android:hint="@string/your_email_address"
            android:inputType="numberPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                style="@style/primary_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/login" />

            <Button
                android:id="@+id/signUpButton"
                style="@style/primary_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/signUp" />
        </LinearLayout>
    </LinearLayout>
</layout>